# doubao-batch-translator

./: .env.example  .gitignore  CLAUDE.md  EPUB_TRANSLATION_GUIDE.md  EPUB_TRANSLATION_ISSUE_ANALYSIS.md  PROJECT_STRUCTURE.md  README.md  check_result.py  check_untranslated.py  clean_xml.py  compare_epub.py  create_test_epub.py  doubao-translator.service  main.py  models.json  package-lock.json  package.json  patch_leaks.py  project-plan.md  pyproject.toml  requirements.txt  service-management.sh  test_concurrency.py  test_concurrent_result.json  test_epub_basic.py  test_html_processor.py  test_translation.json  translation_work.json  translator.py  tsconfig.json  verify_setup.py
PleaseReadHere/: Debugging EPUB And Models.md  EPUB Manual Translation Workflow.md  EPUB Output And Model Strategy.md  Enhance Server Logging.md  FastAPI Immersive Translate Optimization.md  Fix Immersive Translate Integration.md  Markdown Translation Feature.md  Organize Project Structure.md  README.md  为了将本项目上传至github 应该做哪些改进__我有github cli_且本地项目已经与github上的仓库建立了联系.md
core/: __init__.py  client.py  config.py  exceptions.py  token_tracker.py  translator.py
docs/: CONCURRENCY_OPTIMIZATION.md  EPUB_TRANSLATION_GUIDE.md  MIGRATION.md  PROJECT_STRUCTURE.md  UPDATE_SUMMARY.md
examples/: sample.html  sample.md  translation_work.json
processors/: __init__.py  epub_worker.py  html_worker.py  json_worker.py  md_worker.py
server/: __init__.py  api.py
src/: cli.ts  config.ts  performanceAnalysis.ts
tests/: test_best_practices.py  test_concurrency.py
tools/: check_untranslated.py  (+2 more)
(+27 files in other folders)
