[project]
name = "doubao-batch-translator"
version = "2.1.0"
description = "High-throughput batch translator for Doubao/ARK with asyncio concurrency and multi-format processors."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
dependencies = [
    "aiofiles>=23.0.0",
    "beautifulsoup4>=4.12.0",
    "fastapi>=0.104.0",
    "httpx>=0.28.0",
    "lxml>=4.9.0",
    "mistune>=3.0.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
    "tqdm>=4.66.0",
    "uvicorn[standard]>=0.24.0",
]

[dependency-groups]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[[tool.uv.index]]
name = "cernet"
url = "https://mirrors.cernet.edu.cn/pypi/web/simple"
default = true
